--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /DPT/weights/
 /underwater_env
 /.idea
+/ml-agent/
+/core/DPT/weights/dpt_hybrid-midas-501f0c75.pt
+/core/DPT/weights/dpt_hybrid_kitti-cb926ef4.pt
+/core/DPT/weights/dpt_hybrid_nyu-2ce69ec7.pt
+/core/DPT/weights/dpt_large-midas-2f21e586.pt
+/core/DPT/weights/midas_v21_small-70d6b9c8.pt
