--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /core/DPT/weights/dpt_hybrid_nyu-2ce69ec7.pt
 /core/DPT/weights/dpt_large-midas-2f21e586.pt
 /core/DPT/weights/midas_v21_small-70d6b9c8.pt
+/Dataset
+/depth.png
