--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 gym==0.21.0
 scipy==1.5.4
 matplotlib==3.3.4
-opencv-python
+opencv-python==3.4.0.12
 torch==1.10.1
 torchvision
 tensorboard==2.7.0
