--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ gym
 scipy
 matplotlib
 opencv-python
-torch
-torchvision
+torch==2.1.0 
+torchvision==0.16.0 
+torchaudio==2.1.0
 tensorboard
 timm
-nympy
+numpy
