this branch will run your computer

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-gym==0.21.0
-scipy==1.5.4
-matplotlib==3.3.4
-opencv-python==3.4.0.12
-torch==1.10.1
-torchvision
-tensorboard==2.7.0
-timm==0.4.5
+gym
+scipy
+matplotlib
+protobuf==3.20.0
+opencv-python
+torch==2.1.0 
+torchvision==0.16.0 
+torchaudio==2.1.0
+tensorboard
+timm
+numpy
+wandb
